--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "model-to-json-schema",
   "version": "1.0.0",
   "description": "A CLI that transform models in JSON Schemas",
-  "bin": "dist/cli.js",
   "keywords": [
     "cli",
     "jsonschema"
@@ -18,12 +17,21 @@
   "license": "MIT",
   "author": "Alexsandro G Bezerra <alexsandro.g.bezerra@gmail.com>",
   "main": "dist/index.js",
-  "devDependencies": {
-    "@types/node": "^18.6.5",
-    "typescript": "^4.7.4"
-  },
+  "bin": "dist/cli.js",
   "scripts": {
     "build": "tsc",
     "cli": "node dist/cli.js"
+  },
+  "dependencies": {
+    "args": "^5.0.3",
+    "class-validator": "^0.13.2",
+    "class-validator-jsonschema": "^3.1.1",
+    "glob": "^8.0.3"
+  },
+  "devDependencies": {
+    "@types/args": "^5.0.0",
+    "@types/glob": "^7.2.0",
+    "@types/node": "^18.6.5",
+    "typescript": "^4.7.4"
   }
 }
